git: added aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,10 @@
 [push]
   default = matching
 [alias]
+  update = add -u .
+  unstage = reset HEAD
   untracked = status -u .
+  untracked-at = status -u
   ls = ls-files
   st = status
   lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
