--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule ".zsh/zprezto"]
 	path = .zsh/zprezto
 	url = https://github.com/sorin-ionescu/prezto.git
-[submodule ".vimperator/plugins"]
-	path = .vimperator/plugins
+[submodule ".config/vimperator/plugins"]
+	path = .config/vimperator/plugins
 	url = https://github.com/vimpr/vimperator-plugins
-[submodule ".vimperator/colors"]
-	path = .vimperator/colors
+[submodule ".config/vimperator/colors"]
+	path = .config/vimperator/colors
 	url = https://github.com/vimpr/vimperator-colors
