--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -4,30 +4,20 @@
 
 # Backend {{{
 
-# Backend to use: "xrender" or "glx".
-# GLX backend is typically much faster but depends on a sane driver.
 backend = "xrender";
 #backend = "glx";
 
-glx-no-stencil = true;
+glx-no-stencil = false;
 
 # GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
-# My tests with nvidia-drivers show a 10% decrease in performance when the whole screen is modified,
-# but a 20% increase when only 1/4 is.
-# My tests on nouveau show terrible slowdown.
 # Useful with --glx-swap-method, as well.
-glx-copy-from-front = true;
+glx-copy-from-front = false;
 
 # GLX backend: Use MESA_copy_sub_buffer to do partial screen update.
-# My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
-# May break VSync and is not available on some drivers.
 # Overrides --glx-copy-from-front.
 glx-use-copysubbuffermesa = false;
 
 # GLX backend: Avoid rebinding pixmap on window damage.
-# Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
-# Recommended if it works.
-#glx-no-rebind-pixmap = true;
 glx-no-rebind-pixmap = false;
 
 
@@ -39,35 +29,21 @@ glx-no-rebind-pixmap = false;
 # Usually, double buffer means 2, triple buffer means 3.
 # buffer-age means auto-detect using GLX_EXT_buffer_age, supported by some drivers.
 # Useless with --glx-use-copysubbuffermesa.
-# Partially breaks --resize-damage.
 # Defaults to undefined.
 glx-swap-method = "buffer-age";
 
 # }}}
 # Shadows {{{
 
-# Enabled client-side shadows on windows.
 shadow = true;
 
-# Don't draw shadows on DND windows.
 no-dnd-shadow = true;
-
-# Avoid drawing shadows on dock/panel windows.
 no-dock-shadow = true;
-
-# Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 clear-shadow = true;
 
-# The blur radius for shadows. (default 12)
 shadow-radius = 4;
-
-# The left offset for shadows. (default -15)
 shadow-offset-x = -6;
-
-# The top offset for shadows. (default -15)
 shadow-offset-y = -4;
-
-# The translucency for shadows. (default .75)
 shadow-opacity = 0.10;
 
 shadow-red = 0.01;
@@ -86,16 +62,12 @@ shadow-exclude = [
   "name *?= 'shadowless'",
   "name *?= 'xdrawrect'",
   "class_g *?= 'xdrawrect'",
-  "name *?= 'lemonbuddy_bar_1'",
-  "name *?= 'lemonbuddy_bar_2'",
-  "name *?= 'lemonbuddy_bar_3'",
   "name *?= 'tmp/flat'",
   "class_g *?= 'presel_feedback'",
   "class_g *?= 'lemonbar'",
   "class_g *?= 'Bspwm'"
 ];
 
-# Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
 
 # }}}
@@ -108,10 +80,7 @@ inactive-opacity = 0.99;
 frame-opacity = 0.95;
 alpha-step = 0.05;
 
-# Dim inactive windows. (0.0 - 0.95)
 inactive-dim = 0.06;
-
-# Do not let dimness adjust based on window opacity.
 #inactive-dim-fixed = false;
 
 opacity-rule = [
@@ -128,38 +97,24 @@ opacity-rule = [
 # }}}
 # Blur {{{
 
-# Blur background of transparent windows.
 #blur-background = true;
 #blur-kern = "5x5box"
 blur-kern = "7x7box"
 resize-damage = 2
 
-# Blur background of opaque windows with transparent frames as well.
 blur-background-frame = false;
-
-# Do not let blur radius adjust based on window opacity.
 blur-background-fixed = false;
 blur-background-exclude = [];
 
 # }}}
 # Fading {{{
 
-# Fade windows during opacity changes.
 fading = true;
-
-# The time between steps in a fade in milliseconds. (default 10).
 fade-delta = 8;
-
-# Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.07;
-
-# Opacity change between steps while fading out. (default 0.03).
 fade-out-step = 0.07;
-
-# Fade windows in/out when opening/closing
 no-fading-openclose = false;
 
-# Specify a list of conditions of windows that should not be faded.
 fade-exclude = [
   "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
@@ -167,25 +122,11 @@ fade-exclude = [
 # }}}
 # Other {{{
 
-# Try to detect WM windows and mark them as active.
 mark-wmwin-focused = true;
-
-# Mark all non-WM but override-redirect windows active (e.g. menus).
 mark-ovredir-focused = true;
-
-# Use EWMH _NET_WM_ACTIVE_WINDOW to determine which window is focused instead of using FocusIn/Out events.
-# Usually more reliable but depends on a EWMH-compliant WM.
 use-ewmh-active-win = false;
-
-# Detect rounded corners and treat them as rectangular when --shadow-ignore-shaped is on.
 detect-rounded-corners = true;
-
-# Detect _NET_WM_OPACITY on client windows, useful for window managers not passing _NET_WM_OPACITY of client windows to frame windows.
-# This prevents opacity being ignored for some apps.
-# For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
 detect-client-opacity = true;
-
-# Specify refresh rate of the screen.
 # If not specified or 0, compton will try detecting this with X RandR extension.
 #refresh-rate = 60;
 
@@ -197,10 +138,9 @@ detect-client-opacity = true;
 # opengl-swc: Try to VSync with SGI_swap_control OpenGL extension. Only work on some drivers. Works only with GLX backend. Known to be most effective on many drivers. Does not actually control paint timing, only buffer swap is affected, so it doesn’t have the effect of --sw-opti unlike other methods. Experimental.
 # opengl-mswc: Try to VSync with MESA_swap_control OpenGL extension. Basically the same as opengl-swc above, except the extension we use.
 # (Note some VSync methods may not be enabled at compile time.)
-vsync = "opengl-mswc";
+vsync = "opengl-swc";
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
-# Reported to have no effect, though.
 dbe = true;
 
 # Painting on X Composite overlay window. Recommended.
@@ -209,14 +149,11 @@ paint-on-overlay = true;
 # Limit compton to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
 # unless you wish to specify a lower refresh rate than the actual value.
-sw-opti = false;
+sw-opti = true;
 
 # Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
-# Known to cause flickering when redirecting/unredirecting windows.
-# paint-on-overlay may make the flickering less obvious.
 unredir-if-possible = true;
 
-# Specify a list of conditions of windows that should always be considered focused.
 focus-exclude = [
   "name *?= 'jetbrains'",
   "name *?= 'sun-awt-X11'",
@@ -231,10 +168,7 @@ focus-exclude = [
   "name *?= 'Authy'"
 ];
 
-# Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
 detect-transient = true;
-# Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
-# WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
 detect-client-leader = true;
 
 # }}}
