compton: use defaults

--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -7,18 +7,18 @@
 backend = "xrender";
 #backend = "glx";
 
-glx-no-stencil = false;
+#glx-no-stencil = false;
 
 # GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
 # Useful with --glx-swap-method, as well.
-glx-copy-from-front = false;
+#glx-copy-from-front = false;
 
 # GLX backend: Use MESA_copy_sub_buffer to do partial screen update.
 # Overrides --glx-copy-from-front.
-glx-use-copysubbuffermesa = false;
+#glx-use-copysubbuffermesa = false;
 
 # GLX backend: Avoid rebinding pixmap on window damage.
-glx-no-rebind-pixmap = false;
+#glx-no-rebind-pixmap = false;
 
 
 # GLX backend: GLX buffer swap method we assume.
@@ -30,7 +30,7 @@ glx-no-rebind-pixmap = false;
 # buffer-age means auto-detect using GLX_EXT_buffer_age, supported by some drivers.
 # Useless with --glx-use-copysubbuffermesa.
 # Defaults to undefined.
-glx-swap-method = "buffer-age";
+#glx-swap-method = "buffer-age";
 
 # }}}
 # Shadows {{{
@@ -122,11 +122,12 @@ fade-exclude = [
 # }}}
 # Other {{{
 
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
-use-ewmh-active-win = false;
+#mark-wmwin-focused = true;
+#mark-ovredir-focused = true;
+#use-ewmh-active-win = false;
 detect-rounded-corners = true;
 detect-client-opacity = true;
+
 # If not specified or 0, compton will try detecting this with X RandR extension.
 #refresh-rate = 60;
 
@@ -138,18 +139,18 @@ detect-client-opacity = true;
 # opengl-swc: Try to VSync with SGI_swap_control OpenGL extension. Only work on some drivers. Works only with GLX backend. Known to be most effective on many drivers. Does not actually control paint timing, only buffer swap is affected, so it doesn’t have the effect of --sw-opti unlike other methods. Experimental.
 # opengl-mswc: Try to VSync with MESA_swap_control OpenGL extension. Basically the same as opengl-swc above, except the extension we use.
 # (Note some VSync methods may not be enabled at compile time.)
-vsync = "opengl-swc";
+#vsync = "opengl-swc";
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
-dbe = true;
+#dbe = true;
 
 # Painting on X Composite overlay window. Recommended.
-paint-on-overlay = true;
+#paint-on-overlay = true;
 
 # Limit compton to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
 # unless you wish to specify a lower refresh rate than the actual value.
-sw-opti = true;
+#sw-opti = true;
 
 # Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
 unredir-if-possible = true;
