ncmpcpp: fix path

--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -2,7 +2,7 @@
 # Ncmpcpp configuration
 #
 
-ncmpcpp_directory = /home/jaagr/.ncmpcpp
+ncmpcpp_directory = /home/jaagr/.config/ncmpcpp
 
 # MPD connection settings {{{
 
