--- a/.config/lemonbuddy/oldconfs/i3.conf
+++ b/.config/lemonbuddy/oldconfs/i3.conf
@@ -3,22 +3,24 @@ monitor = eDP-1
 height = 35
 lineheight = 4
 dock = true
-offset_x = 60
-offset_y = 15
+;offset_x = 60
+;offset_y = 15
 width = 100%
 
-background = #228f8f8f
-foreground = #ffffffff
+background = #222222
+foreground = #ccfafafa
+linecolor = #666
 
-spacing = 3
+border-bottom = 2
+border-bottom-color = #333333
 
-font-0 = LiberationMono:weight=200:size=9;0
-font-1 = MaterialIcons:size=11;0
-font-2 = FontAwesome:weight=200:size=10;0
-font-3 = Termsynu:size=8;-1
-
+spacing = 1
 padding_left = 2
 padding_right = 2
+
+font-0 = envypn-regular:size=10;0
+font-1 = Siji:pixelsize=10;0
+font-2 = Termsynu:size=8;0
 
 modules-left = i3
 modules-right = date
@@ -28,22 +30,24 @@ monitor = HDMI-1
 height = 35
 lineheight = 4
 dock = true
-offset_x = 60
-offset_y = 15
+;offset_x = 60
+;offset_y = 15
 width = 100%
 
-background = #228f8f8f
-foreground = #ffffffff
+background = ${bar/i3_top.background}
+foreground = ${bar/i3_top.foreground}
+linecolor = ${bar/i3_top.linecolor}
 
-spacing = 3
+border-bottom = 2
+border-bottom-color = #333333
 
-font-0 = LiberationMono:weight=200:size=9;0
-font-1 = MaterialIcons:size=11;0
-font-2 = FontAwesome:weight=200:size=10;0
-font-3 = Termsynu:size=8;-1
+font-0 = ${bar/i3_top.font-0}
+font-1 = ${bar/i3_top.font-1}
+font-2 = ${bar/i3_top.font-2}
 
-padding_left = 2
-padding_right = 2
+spacing = ${bar/i3_top.spacing}
+padding_left = ${bar/i3_top.padding_left}
+padding_right = ${bar/i3_top.padding_right}
 
 modules-left = i3
 modules-right = date
@@ -53,143 +57,94 @@ monitor = HDMI-1
 height = 35
 lineheight = 4
 dock = true
-offset_x = 60
-offset_y = 15
+;offset_x = 60
+;offset_y = 15
 width = 100%
 bottom = true
 
-background = #228f8f8f
-foreground = #ffffffff
+background = ${bar/i3_top.background}
+foreground = ${bar/i3_top.foreground}
+linecolor = ${bar/i3_top.linecolor}
 
-spacing = 3
+border-top = 2
+border-top-color = #333333
 
-font-0 = LiberationMono:weight=200:size=9;0
-font-1 = MaterialIcons:size=11;0
-font-2 = FontAwesome:weight=200:size=10;0
-font-3 = Termsynu:size=8;-1
+font-0 = ${bar/i3_top.font-0}
+font-1 = ${bar/i3_top.font-1}
+font-2 = ${bar/i3_top.font-2}
 
-padding_left = 2
-padding_right = 2
+spacing = ${bar/i3_top.spacing}
+padding_left = ${bar/i3_top.padding_left}
+padding_right = ${bar/i3_top.padding_right}
 
 modules-center = mpd
 
+
 [module/i3]
 type = internal/i3
+format = <label-state>
+
+workspace_icon-0 = term;
+workspace_icon-1 = web;
+workspace_icon-2 = code;
+workspace_icon-3 = music;
+workspace_icon-4 = irssi;
+workspace_icon-default = 
 
 local_workspaces = true
 workspace_name_strip_nchars = 2
 
-workspace_icon-0 = console;
-workspace_icon-1 = web;
-workspace_icon-2 = code;
-workspace_icon-3 = music;
-workspace_icon-4 = irssi;
-workspace_icon-default = 
-
-label-focused = %icon% %name%
-label-focused-padding = 1
-label-focused-underline = #9a4
-label-unfocused = %index%
+label-focused = %index% %icon%
+label-focused-background = #3f3f3f
+label-focused-padding = 2
+label-visible = %index% %icon%
+label-visible-padding = 2
+label-unfocused = %index% %icon%
+label-unfocused-foreground = #444
 label-unfocused-padding = 2
-label-unfocused-margin = 1
-label-unfocused-foreground = #555
-label-unfocused-underline = #222
-;label-visible =  %index%
-label-visible-padding = 1
-; label-visible-underline = #444
-; label-urgent = %icon% %index%
-; label-urgent-padding = 1
+label-urgent = %index% %icon%
+label-urgent-background = #bd2c40
+label-urgent-padding = 2
 
-label-dimmed-underline = ${BAR.background}
 
 [module/date]
 type = internal/date
+date = %%{T3}%%{F#666}%{F#ccfafafa} %Y-%m-%d  %%{F#fba922}%%{F#ccfafafa} %H:%M%%{T-}
+interval = 5
 
-; see "man date" for formatting
-; if date_detailed is defined, clicking the area will toggle between formats
-; if you want to use lemonbar tags here you need to use %%{...}
-date = %%{F#888}%Y-%m-%d%%{F-} %%{F#fff} %H-%M%%{F-}
-date_detailed = %%{F#aaa}%A, %d %B %Y %%{F#fff} %H-%M%%{F#666}-%%{F#9a4}%S%%{F-}
-
-; Seconds to sleep between updates
-;interval = 1.0
-
-; Available tags:
-;   <date> (default)
-format = <date>
-format-spacing = 1
-format-underline = #333
 
 [module/mpd]
 type = internal/mpd
 
-; Seconds to sleep between progressbar/song timer updates
-;interval = 0.5
-
-; Available tags:
-;   <label-song> (default)
-;   <label-time>
-;   <bar-progress>
-;   <toggle> - gets replaced with <icon-(pause|play)>
-;   <icon-random>
-;   <icon-repeat>
-;   <icon-repeatone>
-;   <icon-prev>
-;   <icon-stop>
-;   <icon-play>
-;   <icon-pause>
-;   <icon-next>
-format-online = <icon-prev> <icon-stop> <toggle> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> <label-time>  <label-song>
-
-; Available tags:
-;   <label-offline>
+format-online = <label-song>  <label-time>  <bar-progress>  <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>
 format-offline = <label-offline>
-format-offline-offset = -8
+format-offline-foreground = #66
+label-offline = mpd is off
 
-; Available tokens:
-;   %artist%
-;   %album%
-;   %title%
-; Default- %artist% - %title%
-;label-song =   %artist% - %title%
-;label-song-foreground = ${BAR.foreground}
+icon-prev = 
+icon-seekb = 
+icon-stop = 
+icon-play = 
+icon-pause = 
+icon-next = 
+icon-seekf = 
 
-; Available tokens:
-;   %elapsed%
-;   %total%
-; Default- %elapsed% / %total%
-;label-time = %elapsed% / %total%
-label-time-foreground = #66fafafa
+icon-random = 
+icon-repeat = 
 
-; Available tokens:
-;   None
-label-offline =  mpd is off
-label-offline-foreground = #66fafafa
+toggle_on-foreground = #fba922
+toggle_off-foreground = #66
 
-icon-play = 
-icon-pause = 
-icon-stop = 
-icon-prev = 
-icon-next = 
-icon-random = 
-icon-repeat = 
-;icon-repeatone = 🔂
-
-; Used to display the state of random/repeat/repeatone
-toggle_on-foreground =
-toggle_off-foreground = #66fafafa
-
-; Required if <bar-progress> is used
-bar-progress-width = 25
-bar-progress-format = %fill%%indicator%%empty%
-bar-progress-indicator = |
-bar-progress-indicator-foreground = #ffffffff
-bar-progress-indicator-font = 4
+bar-progress-width = 15
+bar-progress-indicator = 
+bar-progress-indicator-foreground = #bb
 bar-progress-fill = ─
-bar-progress-fill-foreground = #ddffffff
-bar-progress-fill-font = 4
+bar-progress-fill-foreground = #bb
+bar-progress-fill-font = 3
 bar-progress-empty = ─
-bar-progress-empty-font = 4
-bar-progress-empty-foreground = #44ffffff
+bar-progress-empty-foreground = #44
+bar-progress-empty-font = 3
+
+label-time-foreground = #55
 
 ; vim:ft=dosini
