--- a/.irssi/config
+++ b/.irssi/config
@@ -9,7 +9,7 @@ servers = (
   address = "znc.local";
   port = "9242";
   chatnet = "freenode";
-  autoconnect = "no";
+  autoconnect = "yes";
   use_ssl = "yes";
   ssl_verify = "no";
   password = "jaagr/freenode:ZNC_PASSWORD";
@@ -27,7 +27,7 @@ servers = (
   address = "znc.local";
   port = "9242";
   chatnet = "quakenet";
-  autoconnect = "no";
+  autoconnect = "yes";
   use_ssl = "yes";
   ssl_verify = "no";
   password = "jaagr/quakenet:ZNC_PASSWORD";
