--- a/.config/lemonbuddy/testing/i3.conf
+++ b/.config/lemonbuddy/testing/i3.conf
@@ -1,8 +1,8 @@
-[bar/i3_top]
+[bar/top]
 monitor = eDP-1
 height = 35
 lineheight = 4
-dock = true
+dock = false
 ;offset_x = 60
 ;offset_y = 15
 width = 100%
@@ -25,57 +25,57 @@ font-2 = Termsynu:size=8;0
 modules-left = i3
 modules-right = date
 
-[bar/i3_top_hdmi]
+[bar/external_top]
 monitor = HDMI-1
 height = 35
 lineheight = 4
-dock = true
+dock = false
 ;offset_x = 60
 ;offset_y = 15
 width = 100%
 
-background = ${bar/i3_top.background}
-foreground = ${bar/i3_top.foreground}
-linecolor = ${bar/i3_top.linecolor}
+background = ${bar/top.background}
+foreground = ${bar/top.foreground}
+linecolor = ${bar/top.linecolor}
 
 border-bottom = 2
 border-bottom-color = #333333
 
-font-0 = ${bar/i3_top.font-0}
-font-1 = ${bar/i3_top.font-1}
-font-2 = ${bar/i3_top.font-2}
+font-0 = ${bar/top.font-0}
+font-1 = ${bar/top.font-1}
+font-2 = ${bar/top.font-2}
 
-spacing = ${bar/i3_top.spacing}
-padding_left = ${bar/i3_top.padding_left}
-padding_right = ${bar/i3_top.padding_right}
+spacing = ${bar/top.spacing}
+padding_left = ${bar/top.padding_left}
+padding_right = ${bar/top.padding_right}
 
 modules-left = i3
 modules-right = date
 
-[bar/i3_bottom_hdmi]
+[bar/external_bottom]
 monitor = HDMI-1
 height = 35
 lineheight = 4
-dock = true
+dock = false
 ;offset_x = 60
 ;offset_y = 15
 width = 100%
 bottom = true
 
-background = ${bar/i3_top.background}
-foreground = ${bar/i3_top.foreground}
-linecolor = ${bar/i3_top.linecolor}
+background = ${bar/top.background}
+foreground = ${bar/top.foreground}
+linecolor = ${bar/top.linecolor}
 
 border-top = 2
 border-top-color = #333333
 
-font-0 = ${bar/i3_top.font-0}
-font-1 = ${bar/i3_top.font-1}
-font-2 = ${bar/i3_top.font-2}
+font-0 = ${bar/top.font-0}
+font-1 = ${bar/top.font-1}
+font-2 = ${bar/top.font-2}
 
-spacing = ${bar/i3_top.spacing}
-padding_left = ${bar/i3_top.padding_left}
-padding_right = ${bar/i3_top.padding_right}
+spacing = ${bar/top.spacing}
+padding_left = ${bar/top.padding_left}
+padding_right = ${bar/top.padding_right}
 
 modules-center = mpd
 
