--- a/.zsh/.zpreztorc
+++ b/.zsh/.zpreztorc
@@ -49,6 +49,8 @@ zstyle ':prezto:module:editor' dot-expansion 'yes'
 
 # Ignore submodules when they are 'dirty', 'untracked', 'all', or 'none'.
 # zstyle ':prezto:module:git:status:ignore' submodules 'all'
+zstyle ':prezto:module:git:log:oneline' format \
+  '%Cred%h%Creset -%C(yellow)%d%Creset %s %C(dim white)(%an)%Creset %Cgreen(%cr)%Creset'
 
 # }}}
 # GNU Utility {{{
